<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_movie"
        android:icon="@drawable/ic_movies"
        android:title="@string/title_home"
        />

    <item
        android:id="@+id/nav_tvShow"
        android:icon="@drawable/ic_tv"
        android:title="@string/title_tv_show"
        />

    <item
        android:id="@+id/nav_fav"
        android:icon="@drawable/ic_favorite"
        android:title="@string/title_favourite"
        />

</menu>